# Bastion

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bastion/: __init__.py  auth.py  config.py  demo_data.py  fwview.py  history.py  i18n.py  models.py  prefs.py  ratelimit.py  runner.py  secretkey.py  users.py  util.py
bastion/collectors/: authlog.py  fail2ban.py  firewall.py  ports.py
bastion/services/: actions.py  allowlist.py  attackers.py  dashboard.py  fail2ban.py  firewall.py  geoip.py  ignoreip.py  jaillocal.py  nftexpr.py  notify.py  ports.py
bastion/web/: app.py
bastion/web/templates/: base.html  index.html  login.html
bastion/web/templates/partials/: attackers.html  banned.html  firewall.html  ports.html
bastion/web/templates/views/: allowlist.html  attackers.html  banned.html  firewall.html  ports.html  settings.html
scripts/: download-geoip.sh
tests/: conftest.py  test_actions.py  test_alerting.py  test_allowlist.py  test_attackers.py  test_auth.py  test_fail2ban.py  test_firewall.py  test_fwview.py  test_history.py  test_ignoreip.py  test_jaillocal.py  test_nftexpr.py  test_notify.py  test_ports.py  test_prefs.py  test_ratelimit.py  test_runner.py  test_users.py  test_util.py  test_web.py
tests/fixtures/: fail2ban_status.txt  fail2ban_status_sshd.txt  nft_ruleset.json  ss_tlnp.txt
